# Wren_setup

./: .env.hybrid  .gitignore  README.md  wren_v1_to_current_integration.md
POC_DOCUMENTS/: bank_semantic_platform_architecture.md  low_level_design.md  multitenancy_roadmap.md
POC_DOCUMENTS/legacy/: bank_semantic_platform_architecture.md  low_level_design.md  low_level_design_min_management.md  multitenancy_roadmap.md  wren_integration_guide.md
jaffle-wren/: gemini_agent.py  jaffle-profile.json  relationships.yml  server.py  wren_project.yml
jaffle-wren/models/customers/: metadata.yml
jaffle-wren/models/orders/: metadata.yml
jaffle-wren/static/: index.html  main.js  style.css
setup/: README_mac.md  README_windows.md  setup_mac.sh  setup_windows.bat  update_profile.py
ui-wire-setup/WrenAI/: config.yaml
ui-wire-setup/WrenAI/bridge/: README.md  pyproject.toml
ui-wire-setup/WrenAI/bridge/bridge/: __init__.py  engine_manager.py  main.py
ui-wire-setup/WrenAI/docker/: docker-compose-hybrid.yaml
wren-ui/: db.sqlite3
